{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 20,
  "lineage": "bd2b0817-b20a-dfb9-1925-c1452258d441",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891612588918:security-group/sg-0013a629b0641f2a8",
            "description": "Security group for Jenkins auto-scaling agents",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0013a629b0641f2a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from Jenkins Master",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jenkins-autoscaling-agent-sg",
            "name_prefix": "",
            "owner_id": "891612588918",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-autoscaling-agent-sg",
              "Project": "jenkins-autoscaling"
            },
            "tags_all": {
              "Name": "jenkins-autoscaling-agent-sg",
              "Project": "jenkins-autoscaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-078e609cfaf4f098c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891612588918:internet-gateway/igw-05296c5e5108df0e0",
            "id": "igw-05296c5e5108df0e0",
            "owner_id": "891612588918",
            "tags": {
              "Name": "jenkins-autoscaling-igw",
              "Project": "jenkins-autoscaling"
            },
            "tags_all": {
              "Name": "jenkins-autoscaling-igw",
              "Project": "jenkins-autoscaling"
            },
            "vpc_id": "vpc-078e609cfaf4f098c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891612588918:route-table/rtb-0aa150585f3981927",
            "id": "rtb-0aa150585f3981927",
            "owner_id": "891612588918",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05296c5e5108df0e0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jenkins-autoscaling-public-rt",
              "Project": "jenkins-autoscaling"
            },
            "tags_all": {
              "Name": "jenkins-autoscaling-public-rt",
              "Project": "jenkins-autoscaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-078e609cfaf4f098c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d9fa77a7e2fd870",
            "route_table_id": "rtb-0aa150585f3981927",
            "subnet_id": "subnet-09b8fbd85c11f8587"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070979d3ab9e6589b",
            "route_table_id": "rtb-0aa150585f3981927",
            "subnet_id": "subnet-0230934c37f6f1e1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891612588918:subnet/subnet-09b8fbd85c11f8587",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b8fbd85c11f8587",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612588918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-autoscaling-public-subnet-1",
              "Project": "jenkins-autoscaling"
            },
            "tags_all": {
              "Name": "jenkins-autoscaling-public-subnet-1",
              "Project": "jenkins-autoscaling"
            },
            "vpc_id": "vpc-078e609cfaf4f098c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891612588918:subnet/subnet-0230934c37f6f1e1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0230934c37f6f1e1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612588918",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jenkins-autoscaling-public-subnet-2",
              "Project": "jenkins-autoscaling"
            },
            "tags_all": {
              "Name": "jenkins-autoscaling-public-subnet-2",
              "Project": "jenkins-autoscaling"
            },
            "vpc_id": "vpc-078e609cfaf4f098c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891612588918:vpc/vpc-078e609cfaf4f098c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e6712d532de82f6",
            "default_route_table_id": "rtb-013c50d98e3cd2f26",
            "default_security_group_id": "sg-0ab92938fad95dd11",
            "dhcp_options_id": "dopt-0fe12831901ad4e53",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-078e609cfaf4f098c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013c50d98e3cd2f26",
            "owner_id": "891612588918",
            "tags": {
              "Name": "jenkins-autoscaling-vpc",
              "Project": "jenkins-autoscaling"
            },
            "tags_all": {
              "Name": "jenkins-autoscaling-vpc",
              "Project": "jenkins-autoscaling"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}